<resources>
    <string name="app_name">IniridaApp</string>
    <string name="start_title">Iniciar</string>
    <string name="register_title">Registro</string>
    <string name="register_title2">Crear una nueva cuenta</string>
    <string name="register_title3">Registrarme</string>

    <string name="name_title">Nombre Completo</string>
    <string name="name_number">Numero de contacto</string>
    <string name="name_mail">Correo</string>
    <string name="name_pass">Contraseña</string>
    <string name="forget_password">Olvidaste tu contraseña?</string>
    <string name="have_account">Tienes una cuenta? Iniciar</string>

    <string name="welcome_title">Bienvenidos a Inirida App</string>
    <string name="welcome_text">Aplicación exclusiva para Inírida, creada con el
                    propósito de fortalecer nuestra comunidad al
                    conectar a sus habitantes con los mejores servicios
                    locales. Nos enorgullece reunir en un solo lugar todo
                    lo que necesitas para tu día a día, desde
                    supermercados y licoreras hasta una amplia gama
                    de servicios ofrecidos por emprendedores locales.
                    Con nosotros, no solo ahorrarás tiempo, sino que
                    también apoyarás el crecimiento y la sostenibilidad
                    de los negocios de nuestra ciudad. Todo está a tu
                    alcance, de manera rápida, sencilla y segura.
                    ¡Bienvenido a la nueva forma de vivir Inírida!
    </string>
    <string name="image_view">imageView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="back_title">Volver</string>
    <string name="text_aboutus">Somos una aplicación exclusiva para Inírida, creada con el propósito de fortalecer nuestra comunidad al conectar a sus habitantes con los mejores servicios locales. Nos enorgullece reunir en un solo lugar todo lo que necesitas para tu día a día, desde supermercados y licoreras hasta una amplia gama de servicios ofrecidos por emprendedores locales. Con nosotros, no solo ahorrarás tiempo, sino que también apoyarás el crecimiento y la sostenibilidad de los negocios de nuestra ciudad. Todo está a tu alcance, de manera rápida, sencilla y segura. ¡Bienvenido a la nueva forma de vivir Inírida!</string>
    <string name="categoria1_title">Alimentos y hospitalidad</string>
    <string name="movilidad_y_transporte">Movilidad y transporte</string>
    <string name="servicios_especializados">Servicios especializados</string>
    <string name="hogar_art_culos_y_servicios">Hogar, artículos y servicios</string>

</resources>