<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="40dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_inirida" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fredoka_variablefont_wdth"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_title"
        android:layout_below="@+id/logo"/>

    <TextView
        android:layout_marginStart="50dp"
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fredoka_variablefont_wdth"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"
        android:layout_below="@+id/welcome_title"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:fontFamily="@font/fredoka_bold"
        android:background="@drawable/shape_btn_dark"
        android:layout_below="@id/welcome_text"
        android:textSize="18sp"
        android:text="@string/start_title"/>



</RelativeLayout>