<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linear_login"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back"
            android:layout_gravity="center"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_arrow_back"
            android:backgroundTint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/fredoka_bold"
            android:textSize="32sp"
            android:text="@string/start_title"/>
    </LinearLayout>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        android:layout_below="@+id/linear_login"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/title_register2"
        android:background="@drawable/logo_black"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"

        android:gravity="center_horizontal"

        android:layout_below="@+id/line"/>

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@id/title_register2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_et"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="left|center"
        android:hint="@string/name_mail"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/gray_light"/>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@id/et_mail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_et"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="left|center"
        android:hint="@string/name_pass"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/gray_light"/>

    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_below="@id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:fontFamily="@font/fredoka_bold"
            android:textSize="24sp"
            android:background="@drawable/shape_btn"
            android:layout_below="@+id/et_pass"
            android:text="@string/start_title"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_btn"
        android:backgroundTint="@color/gray_light"/>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="center_horizontal"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>