<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/linear_register"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/back"
            android:text="Actualiza tus datos"
            android:fontFamily="@font/fredoka_bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="35dp"/>

    </LinearLayout>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        android:layout_below="@+id/linear_register"
        android:layout_centerHorizontal="true" />



    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@id/line"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_et"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="left|center"
        android:hint="@string/name_title"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/gray_light"/>

    <EditText
        android:id="@+id/et_number"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@id/et_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_et"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="left|center"
        android:hint="@string/name_number"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/gray_light" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@id/et_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_et"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="left|center"
        android:hint="@string/name_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/gray_light" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@id/et_mail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_et"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="left|center"
        android:hint="@string/name_pass"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/gray_light" />

    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_below="@id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/register"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:fontFamily="@font/fredoka_bold"
            android:textSize="20sp"
            android:background="@drawable/shape_btn"
            android:layout_below="@+id/et_pass"
            android:text="Actualizar"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_btn"
        android:backgroundTint="@color/gray_light"/>


</RelativeLayout>